fix: fix contrast ratio of body text to pass WCAG AAA

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -69,7 +69,7 @@ main {
   justify-content: center;
 }
 .subtext {
-  color: #666;
+  color: #999;
   max-width: 960px;
   margin-top: .5rem;
   margin-bottom: 3rem;
@@ -130,7 +130,7 @@ a {
   width: 100%;
 }
 p {
-  color: #666;
+  color: #999;
   max-width: 960px;
   text-align: justify;
   line-height: 1.5;
